# ipyant

./: .gitignore  CHANGELOG.md  DEV.md  README.md  pyproject.toml
ipyai/: __init__.py  api_client.py  app.py  backend_common.py  backends.py  claude_client.py  cli.py  codex_client.py  core.py  kernel_bridge.py  mcp_bridge.py  mcp_server.py  pi_client.py  shell.py  tooling.py
ipyai/extensions/: ipyai-bridge.ts
ipyant/: __init__.py  claude_client.py  cli.py  core.py
samples/: README.md  capture_codex_shapes.py  capture_sdk_shapes.py  toolslm_sdk_tool_demo.py
samples/.claude/: .claude.json
samples/.claude/backups/: .claude.json.backup.1775358047938
samples/.claude/projects/-Users-jhoward-aai-ws-links-claude-agent-sdk-python-ipyant/: 010ee6ee-844b-4754-9258-1f3d34ed3816.jsonl  27171acf-e2ef-4f47-b153-a092b93befdc.jsonl  327ff6c9-919b-4db9-955e-385472cca003.jsonl  94a2cd66-d61e-44f6-804a-da30d06ef48f.jsonl  a167d136-ff91-415b-81ba-646a4cd73fe8.jsonl  d117eb7f-9a81-4cef-b20d-3b1fbf96588c.jsonl
samples/outputs/: codex_text_stream.json  python_tool_stream.json  text_stream.json
tests/: conftest.py  test_api_client.py  test_app_initialize.py  test_backend_claude_api.py  test_backend_claude_cli.py  test_backend_claude_sdk.py  test_backend_codex.py  test_backend_codex_api.py  test_backend_common.py  test_backend_internals.py  test_backend_pi.py  test_backends.py  test_claude_client.py  test_cli_e2e.py  test_codex_client.py  test_core.py  test_history_adapter.py  test_kernel_dispatch.py  test_kernel_existing.py  test_kernel_lifecycle.py  test_mcp_bridge.py  test_mcp_server.py  test_pi_client.py
tools/: capture_samples.sh  test.sh
