[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ipyai"
dynamic = ["version"]
description = "Multi-backend terminal IPython assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "info@answer.ai"}]
dependencies = ["fastcore>=1.12.31", "ipython>=9", "rich", "mistletoe", "ipythonng", "mcp", "safepyrun", "lisette>=0.0.47",
    "safecmd", "pyskills", "toolslm"]

[project.scripts]
ipyai = "ipyai.cli:main"
ipyai-mcp-bridge = "ipyai.mcp_bridge:main"

[project.urls]
Source = "https://github.com/answerdotai/ipyai"

[project.optional-dependencies]
dev = ["build>=1.0.0", "fastship>=0.0.6", "pytest", "pytest-asyncio", "pytest-xdist", "twine>=5.0.0"]

[tool.setuptools.dynamic]
version = {attr = "ipyai.__version__"}

[tool.setuptools.packages.find]
include = ["ipyai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:pty"]
addopts = "-n 4 --dist loadfile"

[tool.fastship]
